<resources>

    <string name="app_name">mParticleDemo</string>
    <string name="title_activity_home">mParticle Demo</string>
    <string name="title_messages_list">Messages</string>
    <string name="title_sessions_list">Sessions</string>
    <string name="title_uploads_list">Uploads</string>
    <string name="title_commands_list">Commands</string>
    <string name="menu_proxy">Proxy</string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_device_info">Device Info</string>
    <string name="menu_close">Close</string>
    <string name="label_api_key_secret">API Key/Secret:</string>
    <string name="label_event_data_inputs">Event/Data Inputs</string>
    <string name="button_a">Button A</string>
    <string name="button_b">Button B</string>
    <string name="button_c">Button C</string>
    <string name="view_a">View A</string>
    <string name="view_b">View B</string>
    <string name="eventEndUpload">Event+End+Upload</string>
    <string name="button_set">Set</string>
    <string name="label_user_var">User Var</string>
    <string name="label_session_var">Session Var</string>
    <string name="label_data">Data</string>
    <string name="sessions">Sessions</string>
    <string name="messages">Msgs</string>
    <string name="uploads">Uploads</string>
    <string name="commands">Commands</string>
    <string name="controls">Controls</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="label_new">New</string>
    <string name="upload">Upload</string>
    <string name="end">End</string>
    <string name="crash">Crash</string>
    <string name="error">Error</string>
    <string name="exception">Exception</string>
    <string name="update_location">Update Location</string>
    <string name="debug">Debug</string>
    <string name="exceptions">Handle Exceptions</string>
    <string name="optout">OptOut</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_auto_reg">Register</string>
    <string name="push_auto_unreg">Unregister</string>
    <string name="push_man_reg">Set ID</string>
    <string name="push_man_unreg">Clear ID</string>
    <string name="refresh">Refresh</string>
    <string name="session_id">Session ID</string>
    <string name="message_id">Message ID</string>
    <string name="upload_id">Upload ID</string>
    <string name="api_key">API Key</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="message">Message</string>
    <string name="attributes">Attributes</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="session_length">Duration</string>
    <string name="post_data">Post Data</string>
    <string name="url">URL</string>
    <string name="method">Method</string>
    <string name="headers">Headers</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="track_location">Track Location</string>
    <string name="provider">Provider</string>
    <string name="loc_min_time">Time (secs)</string>
    <string name="loc_min_dist">Dist. (meters)</string>
    <string name="loc_min_time_default">30</string>
    <string name="loc_min_dist_default">50</string>
    <string name="browser_integration">Browser Integration</string>
    <string name="button_browser_status">Check Status</string>
    <string name="button_browser_clear_cookie">Clear Cookie</string>
    <string name="button_browser_set_cookie_pixel">Set Cookie (pixel)</string>
    <string name="button_browser_set_cookie_redirect">Set Cookie (redirect)</string>
    <string name="button_browser_set_return_http">Set Cookie and Return (http)</string>
    <string name="button_browser_set_return_custom">Set Cookie and Return (custom)</string>

</resources>
