<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sessionId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_id" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time" />

    <TextView
        android:id="@+id/sessionLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_length" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />

</LinearLayout>
