<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".HomeActivity" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_event_data_inputs"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:onClick="pressEventButton"
            android:text="@string/button_a" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonA"
            android:layout_alignBottom="@+id/buttonA"
            android:layout_toRightOf="@+id/buttonA"
            android:onClick="pressEventButton"
            android:text="@string/button_b" />

        <ToggleButton
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonB"
            android:layout_alignTop="@+id/buttonA"
            android:layout_toRightOf="@+id/buttonB"
            android:onClick="pressEventButton"
            android:text="@string/button_c"
            android:textOff="Button C OFF"
            android:textOn="Button C ON" />

        <Button
            android:id="@+id/viewA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/buttonA"
            android:onClick="pressEventButton"
            android:text="@string/view_a" />

        <Button
            android:id="@+id/viewB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonA"
            android:layout_toRightOf="@+id/viewA"
            android:onClick="pressEventButton"
            android:text="@string/view_b" />

        <Button
            android:id="@+id/buttonError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonA"
            android:layout_toRightOf="@+id/viewB"
            android:onClick="pressEventButton"
            android:text="@string/error" />

        <Button
            android:id="@+id/buttonException"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonA"
            android:layout_toRightOf="@+id/buttonError"
            android:onClick="pressEventButton"
            android:text="@string/exception" />

        <Button
            android:id="@+id/eventEndUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewA"
            android:onClick="pressEventButton"
            android:text="@string/eventEndUpload" />

        <LinearLayout
            android:id="@+id/userVarInputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventEndUpload" >

            <TextView
                android:id="@+id/userVarLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_user_var"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editUserVar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonSetUserVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pressSetVariable"
                android:text="@string/button_set" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sessionVarInputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userVarInputs" >

            <TextView
                android:id="@+id/sessionVarLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_session_var"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editSessionVar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonSetSessionVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pressSetVariable"
                android:text="@string/button_set" />
        </LinearLayout>

        <TextView
            android:id="@+id/textData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sessionVarInputs"
            android:text="@string/label_data"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonListSessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textData"
            android:onClick="pressDataButton"
            android:text="@string/sessions" />

        <Button
            android:id="@+id/buttonListMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textData"
            android:layout_toRightOf="@+id/buttonListSessions"
            android:onClick="pressDataButton"
            android:text="@string/messages" />

        <Button
            android:id="@+id/buttonListUploads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textData"
            android:layout_toRightOf="@+id/buttonListMessages"
            android:onClick="pressDataButton"
            android:text="@string/uploads" />

        <Button
            android:id="@+id/buttonListCommands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textData"
            android:layout_toRightOf="@+id/buttonListUploads"
            android:onClick="pressDataButton"
            android:text="@string/commands" />

        <TextView
            android:id="@+id/textControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonListSessions"
            android:text="@string/controls"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonStartSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textControls"
            android:onClick="pressSessionButton"
            android:text="@string/start" />

        <Button
            android:id="@+id/buttonStopSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textControls"
            android:layout_toRightOf="@+id/buttonStartSession"
            android:onClick="pressSessionButton"
            android:text="@string/stop" />

        <Button
            android:id="@+id/buttonNewSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textControls"
            android:layout_toRightOf="@+id/buttonStopSession"
            android:onClick="pressSessionButton"
            android:text="@string/label_new" />

        <Button
            android:id="@+id/buttonEndSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textControls"
            android:layout_toRightOf="@+id/buttonNewSession"
            android:onClick="pressSessionButton"
            android:text="@string/end" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textControls"
            android:layout_toRightOf="@+id/buttonEndSession"
            android:onClick="pressSessionButton"
            android:text="@string/upload" />

        <Button
            android:id="@+id/buttonCrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonStartSession"
            android:onClick="pressSessionButton"
            android:text="@string/crash" />

        <Button
            android:id="@+id/buttonUpdateLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonStartSession"
            android:layout_toRightOf="@+id/buttonCrash"
            android:onClick="pressSessionButton"
            android:text="@string/update_location" />

        <CheckBox
            android:id="@+id/checkBoxOptOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonUpdateLocation"
            android:onClick="pressToggleOption"
            android:text="@string/optout" />

        <CheckBox
            android:id="@+id/checkBoxDebugMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxOptOut"
            android:layout_alignBottom="@+id/checkBoxOptOut"
            android:layout_toRightOf="@+id/checkBoxOptOut"
            android:onClick="pressToggleOption"
            android:text="@string/debug" />

        <CheckBox
            android:id="@+id/checkBoxExceptionsMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxOptOut"
            android:layout_alignBottom="@+id/checkBoxOptOut"
            android:layout_toRightOf="@+id/checkBoxDebugMode"
            android:onClick="pressToggleOption"
            android:text="@string/exceptions" />

        <CheckBox
            android:id="@+id/checkBoxPushRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxOptOut"
            android:onClick="pressToggleOption"
            android:text="@string/push_notify" />

        <RelativeLayout
            android:id="@+id/locationListener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxPushRegistration" >

            <TextView
                android:id="@+id/lblLocationTracking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_tracking"
                android:textSize="22sp" />

            <ToggleButton
                android:id="@+id/enableLocationTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblLocationTracking"
                android:layout_marginTop="15dp"
                android:onClick="pressToggleLocationTracking"
                android:text="@string/track_location" />

            <TextView
                android:id="@+id/lblProvider"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblLocationTracking"
                android:layout_toRightOf="@+id/enableLocationTracking"
                android:text="@string/provider"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblLocMinTime"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblLocationTracking"
                android:layout_toRightOf="@+id/lblProvider"
                android:text="@string/loc_min_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblLocMinDistance"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblLocationTracking"
                android:layout_toRightOf="@+id/lblLocMinTime"
                android:text="@string/loc_min_dist"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinLocationProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblProvider"
                android:layout_below="@+id/lblProvider"
                android:ems="4" />

            <EditText
                android:id="@+id/editLocMinTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblLocMinTime"
                android:layout_below="@+id/lblLocMinTime"
                android:ems="4"
                android:inputType="number"
                android:text="@string/loc_min_time_default" />

            <EditText
                android:id="@+id/editLocMinDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblLocMinDistance"
                android:layout_below="@+id/lblLocMinDistance"
                android:ems="4"
                android:inputType="number"
                android:text="@string/loc_min_dist_default" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textDeviceAttributes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationListener"
            android:text="@string/device_attributes"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textDiagnostics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDeviceAttributes"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>
